--- a/Publications.html
+++ b/Publications.html
@@ -50,74 +50,48 @@
 							<h3 ><strong>RESEARCH ARTICLES</strong></h3>
 							<br>
 							<p>
-								1. <strong>Sade, N</strong>; Vinocur, BJ; Diber, A; Shatil, A; Ronen, G; Nissan, H  ; Wallach, R; Karchi, H; Moshelion, M. Improving plant stress tolerance and yield production: is the tonoplast aquaporin SlTIP2;2 a key to isohydric to anisohydric conversion? <strong>NEW PHYTOLOGIST</strong>. 2009 January;Vol.181:pp.651-661[ Plant Science,IF:8.795 7/234(Q1]
+								1. Toubiana, D; Puzis, R; Wen, L; Sikron, N; Kurmanbayeva, A; Soltabayeva, A; Wilhelmi, MDR; <strong>Sade, N</strong>; Fait, A; Sagi, M; Blumwald, E; Elovici, Y*. Combined network analysis and machine learning allows the prediction of metabolic pathways from tomato metabolomics data. COMMUNICATIONS BIOLOGY. 2019 June; Vol.2:214.[ Agricultural and Biological Sciences,IF:6.5 10/322 (Q1)]
 							</p>
 							<p>
-								2. <strong>Sade, N</strong>; Gebretsadik, M; Seligmann, R; Schwartz, A; Wallach, R; Moshelion, M. The role of tobacco aquaporin1 in improving water use efficiency, hydraulic conductivity, and yield production under salt stress. <strong>PLANT PHYSIOLOGY </strong>. 2010 January; Vol.152:pp.245-254 [Plant Science,IF:7.52 10/234(Q1)]
+								2. Toubiana, D; <strong>Sade, N^</strong>; Liu, L; Wilhelmi, MDR; Brotman, Y; Luzarowska, U; Vogel, JP; Blumwald, E. Correlation-based network analysis combined with machine learning techniques highlight the role of the GABA shunt in Brachypodium sylvaticum freezing tolerance. SCIENTIFIC REPORTS. 2020 March; Vol. 10: 4489. [ Multidisciplinary,IF:4.99 11/137 (Q1)]
 							</p>
 							<p>
-								3. Kelly, G; David-Schwartz, R; <strong>Sade, N</strong>; Moshelion, M; Levi, A; Alchanatis, V; Granot, D. The pitfalls of transgenic selection and new roles of athxk1: a high level of athxk1 expression uncouples hexokinase1-dependent sugar signaling from exogenous sugar. <strong>PLANT PHYSIOLOGY</strong>. 2012 May; Vol.159:pp.47-51[Plant Science,IF:7.52 10/234(Q1)]
+								3. Umnajkitikorn, K; <strong>Sade, N</strong>; Wilhelmi, MDR; Gilbert, ME; Blumwald, E*. Silencing of OsCV (chloroplast vesiculation) maintained photorespiration and N assimilation in rice plants grown under elevated CO2. PLANT CELL AND ENVIRONMENT. 2020 April; Vol.43:pp. 920-933. [ Plant Science,IF:7.9 22/494 (Q1)]
 							</p>
 							<p>
-								4. <strong>Sade, N</strong>; Gebremedhin, A; Moshelion M. Risk-taking plants: anisohydric behavior as a stress-resistance trait. <strong>PLANT SIGNALING & BEHAVIOR</strong>.  2012 July;Vol.7:pp.767-770 [Plant Science,IF:1.671 108/234(Q2),]
+								4. Sade, D; <strong>Sade, N</strong>; Brotman, Y; Czosnek, H*. Tomato yellow leaf curl virus (TYLCV)-resistant tomatoes share molecular mechanisms sustaining resistance with their wild progenitor Solanum habrochaites but not with TYLCV-susceptible tomatoes. PLANT SCIENCE. 2020 June; Vol. 295: 110439. [ Plant Science, IF:5.3 41/494 (Q1)]
 							</p>
 							<p>
-								5. <strong>Sade, N</strong>; Galle, A; Flexas, J; Lerner, S; Peleg, G; Yaaran, A; Moshelion, M. Differential tissue-specific expression of NtAQP1 in Arabidopsis thaliana reveals a role for this protein in stomatal and mesophyll conductance of CO2 under standard and salt-stress conditions. <strong>PLANTA</strong>. 2014 February; Vol.239:pp357-366.[ Plant Science,IF:3.687 47/234(Q1]
+								5. Gal, A; Hendel, E; Peleg, Z; Schwartz, N*; <strong>Sade, N*</strong>. Measuring the hydraulic conductivity of grass root systems. CURRENT PROTOCOLS IN PLANT BIOLOGY. 2020 June; Vol.5: e20110. [ Plant Science, IF:2.79 120/494 (Q1)]
 							</p>
 							<p>
-								6. Kelly, G; <strong>Sade, N</strong>; Attia, Z; Secchi, F; Zwieniecki, M; Holbrook, NM ; Levi, A; Alchanatis, V; Moshelion, M ; Granot, D. Relationship between hexokinase and the aquaporin pip1 in the regulation of photosynthesis and plant growth. <strong>PLOS ONE</strong>. 2014 February; Vol.9: e87888. [ MULTIDISCIPLINARY SCIENCES,IF:3.227 27/71(Q2),]
+								6. <strong>Sade, N*</strong>; Weng, F; Tajima, H; Zeron, Y; Zhang, L; Wilhelmi, MDR; Day, G; Peleg, Z; Blumwald, E*. A cytoplasmic receptor-like kinase contributes to salinity tolerance. PLANTS-BASEL. 2020 October; Vol.9:1383. [ Plant Science,IF:4.6 93/494(Q1)]
 							</p>
 							<p>
-								7. Sade, D; <strong>Sade, N^</strong>; Shriki, O; Lerner, S; Gebremedhin, A; Karavani, A; Brotman, Y; Osorio, S; Fernie, AR; Willmitzer, L; Czosnek, H; Moshelion, M. Water balance, hormone homeostasis, and sugar signaling are all involved in tomato resistance to tomato yellow leaf curl virus. <strong>PLANT PHYSIOLOGY</strong>. 2014 August ;Vol.165: pp.1684-1697 [Plant Science,IF:7.52 10/234(Q1),]
+								7. Grunwald, Y; Wigoda, N; <strong>Sade, N</strong>; Yaaran, A; Torne, T; Gosa, SC; Moran, N; Moshelion, M*. Arabidopsis leaf hydraulic conductance is regulated by xylem sap pH, controlled, in turn, by a P-type H+-ATPase of vascular bundle sheath cells. THE PLANT JOURNAL. 2021 April;Vol.106:301-313.  [ Plant Science, IF:7 21/494 (Q1)]
 							</p>
 							<p>
-								8. <strong>Sade, N</strong>; Shatil-Cohen, A; Attia, Z; Maurel, C; Boursiac, Y; Kelly, G; Granot, D; Yaaran, A; Lerner, S; Moshelion, M. The role of plasma membrane aquaporins in regulating the bundle sheath-mesophyll continuum and leaf hydraulics. <strong>PLANT PHYSIOLOGY</strong>. 2014 November;Vol.166: pp.1609 [Plant Science,IF:7.52 10/234(Q1),]
+								8. Kelly, G; Brandsma, D; Egbaria, A; Stein, O;  Doron-Faigenboim, A; Lugassi, N; Belausov, E; Zemach, H; Shaya, F; Carmi, N; <strong>Sade, N</strong>; Granot, D*. Guard cells control hypocotyl elongation through HXK1, HY5 and PIF4. COMMUNICATIONS BIOLOGY. 2021 June;Vol 21:765 [Agricultural and Biological Sciences,IF:6.5 10/322 (Q1)]
 							</p>
 							<p>
-								9. <strong>Sade, N</strong>; Shatil-Cohen, A ; Moshelion, M. Bundle-sheath aquaporins play a role in controlling Arabidopsis leaf hydraulic conductivity. <strong>PLANT SIGNALING & BEHAVIOR</strong> .2015 May;Vol.10(5) [ Plant Science,IF:1.671 108/234(Q2), times cited: 13]
+								9. Bar-On, L*; Garlando, U; Sophocleous, M; Jog, A; Ros, PM; <strong>Sade, N</strong>; Avni, A; Shacham-Diamand, Y; Demarchi, D. Electrical Modelling of In-Vivo Impedance Spectroscopy of Nicotiana tabacum Plants. FRONTIERS IN ELECTRONICS. 2021 September ;Vol 2:753145 [IF: N/A ]
 							</p>
 							<p>
-								10. <strong>Sade, N</strong>;  Galkin, E;  Moshelion, M. Measuring Arabidopsis, Tomato and Barley leaf relative water content (RWC).  <strong>BIO-PROTOCOL</strong>. 2015 April ;Vol. 5: e1451. [IF: N/A,]
+								10. Zhang, F; Wu, J; <strong>Sade, N</strong>; Wu, S; Egbaria, A; Fernie, AR; Yan, J; Qin, F; Chen, W; Brotman, Y; Dai, M*. Genomic basis underlying the metabolome-mediated drought adaptation of maize. GENOME BIOLOGY. 2021 September; Vol 22(1):260 [ Genetics, IF 17.9 5/344(Q1) ]
 							</p>
 							<p>
-								11. Saha, P; <strong>Sade, N^</strong>; Arzani, A; Wilhelmi, MDR; Coe, KM; Li, BS; Blumwald, E. Effects of abiotic stress on physiological plasticity and water use of Setaria viridis (L.). <strong>PLANT SCIENCE</strong>. 2016 October; Vol.251:pp.128-138 [ Plant Science,IF:4.253 37/234 (Q1),]
+								11. Zhang, Y; Kilambi, HV; Liu, J;  Bar, H;  Lazary, S; Egbaria, A; Ripper, D; Charrier, L; Belew, ZM; Wulff, N; Damodaran, S; Nour-Eldin, HH; Aharoni, A;  Ragni, L; Strader, L; <strong>Sade, N</strong>; Weinstain, R; Geisler, M; Shani, E*.  ABA homeostasis and long-distance translocation are redundantly regulated by ABCG ABA importers. SCIENCE ADVANCES. 2021 October; Vol 22:eabf6069 [ Multidisciplinary sciences,IF:14.9 3/137 (Q1) ]
 							</p>
 							<p>
-								12. Kelly, G; <strong>Sade, N^</strong>; Doron-Faigenboim, A; Lerner,; Shatil-Cohen,; Yeselson, Y; Egbaria, A; Kottapalli, J; Schaffer, AA; Moshelion, M; Granot, D. Sugar and hexokinase suppress expression of PIP aquaporins and reduce leaf hydraulics that preserves leaf water potential. <strong>PLANT JOURNAL</strong>. 2017 July; Vol. 91: pp. 325-339. [ Plant Science,IF:6.629 13/234 (Q1)]
+								12. Ahouvi, Y; Haber, Z; Zach, YY; Rosental, L; Toubiana, D; Sharma, D; Alseekh, S; Tajima, H; Fernie, AR; Brotman, Y; Blumwald, E; <strong>Sade, N*</strong>.  The Alteration of Tomato Chloroplast Vesiculation Positively Affects Whole-Plant Source–Sink Relations and Fruit Metabolism under Stress Conditions. PLANT CELL PHYSIOLOGY 2022  September Vol pcac133 [ Plant Science, IF 4.9 26/494(Q1) ]
 							</p>
 							<p>
-								13. <strong>Sade, N</strong>; Wilhelmi, MDR; Ke, XJ; Brotman,; Wright, M; Khan, I; De Souza, W; Bassil, E; Tobias, CM; Thilmony, R; Vogel,; Blumwald, E. Salt tolerance of two perennial grass Brachypodium sylvaticum accessions. <strong>PLANT MOLECULAR BIOLOGY</strong>. 2018 February; Vol.96:pp. 305-314. [ Plant Science,IF:4.065 42/234 (Q1)]
+								13. Haber, Z; Wilhelmi, MDR; Fernández-Bayo, JD; Harrold, DR; Stapleton, JJ; Toubiana, D; VanderGheynst, JS; Blumwald, E; Simmons, CW; <strong>Sade, N*</strong>; Achmon, Y*. The effect of circular soil biosolarization treatment on the physiology, metabolomics, and microbiome of tomato plants under certain abiotic stresses. FRONTIERS IN PLANT SCIENCE. 2022 November https://doi.org/10.3389/fpls.2022.1009956 [ Plant Science, IF 6.6 33/494(Q1) ]
 							</p>
 							<p>
-								14. <strong>Sade, N</strong>; Umnajkitikorn, K; Wilhelmi, MDR; Wright, M; Wang, SH; Blumwald, E. Delaying chloroplast turnover increases water-deficit stress tolerance through the enhancement of nitrogen assimilation in rice. <strong>JOURNAL OF EXPERIMENTAL BOTANY</strong>. 2018 February; Vol. 69:pp. 867-878. [ Plant Science,IF:7.011 14/234 (Q1)]
+								14. Kelly, G; Yaaran, A; Gal, A; Egbaria, A; Brandsma, D; Belausov, E; Wolf, D; David-Schwartz, R; Granot, D; Eyal, Y; Carmi, N; <strong>Sade, N*</strong>. Guard cell activity of PIF4 and HY5 control transpiration. PLANT SCIENCE (In press). [ Plant Science, IF:5.3 41/494 (Q1]
 							</p>
 							<p>
-								15. Achmon, Y; <strong>Sade, N</strong>; Wilhelmi, MDR; Fernandez-Bayo, JD; Harrold, DR; Stapleton, JJ; VanderGheynst, JS; Blumwald, E; Simmons, CW. Effects of short-term biosolarization using mature compost and industrial tomato waste amendments on the generation and persistence of biocidal soil conditions and subsequent tomato growth. <strong>JOURNAL OF AGRICULTURAL AND FOOD CHEMISTRY</strong>. 2018 June; Vol.66:pp. 5451-5461. [ Agriculture, Multidisciplinary IF:4.29 4/51 (Q1)]
-							</p>
-							<p>
-								16. Farcuh, M; Toubiana, D; <strong> Sade, N</strong>; Rivero, RM; Doron-Faigenboim, A; Nambara, E; Sadka, A; Blumwald, E. Hormone balance in a climacteric plum fruit and its non-climacteric bud mutant during ripening. <strong>PLANT SCIENCE</strong>. 2019 March; Vol.280:pp. 51-65. [ Plant Science,IF:4.253 37/234 (Q1)]
-							</p>
-							<p>
-								17. Toubiana, D; <strong>Sade, N^</strong>; Liu, LF; Wilhelmi, MDR; Brotman, Y; Luzarowska, U; Vogel, JP; Blumwald, E. Correlation-based network analysis combined with machine learning techniques highlight the role of the GABA shunt in Brachypodium sylvaticum freezing tolerance. <strong>SCIENTIFIC REPORTS</strong>. 2020 March; Vol. 10: 4489. [ Multidisciplinary sciences,IF:4.576 17/71 (Q1)]
-							</p>
-							<p>
-								18. Umnajkitikorn, K; <strong>Sade, N</strong>; Wilhelmi, MDR; Gilbert, ME ; Blumwald, E*. Silencing of OsCV (chloroplast vesiculation) maintained photorespiration and N assimilation in rice plants grown under elevated CO2. <strong>PLANT CELL AND ENVIRONMENT</strong>. 2020 April; Vol.43:pp. 920-933. [ Plant Science,IF:7.044 11/234 (Q1)]
-							</p>
-							<p>
-								19. Toubiana,; Puzis, R; Wen, LL; Sikron, N; Kurmanbayeva, A; Soltabayeva, A; Wilhelmi, MDR; <strong>Sade, N</strong>; Fait, A; Sagi, M; Blumwald, E; Elovici, Y*. Combined network analysis and machine learning allows the prediction of metabolic pathways from tomato metabolomics data. <strong>COMMUNICATIONS BIOLOGY</strong>. 2019 June; Vol.2:214.[ Biology,IF:4.165 18/93 (Q1)]
-							</p>
-							<p>
-								20. Sade, D; <strong>Sade, N</strong>; Brotman, Y; Czosnek, H*. Tomato yellow leaf curl virus (TYLCV)-resistant tomatoes share molecular mechanisms sustaining resistance with their wild progenitor Solanum habrochaites but not with TYLCV-susceptible tomatoes. <strong>PLANT SCIENCE</strong>. 2020 June; Vol. 295: 110439. [ Plant Science,IF:4.253 37/234 (Q1),]
-							</p>
-							<p>
-								21. <strong>Sade, N*</strong>; Weng, F; Tajima, H; Zeron, Y; Zhang,; Wilhelmi, MDR  ; Day, G; Peleg, Z ; Blumwald, E*. A cytoplasmic receptor-like kinase contributes to salinity tolerance. <strong>PLANTS-BASEL</strong>. 2020 October; Vol.9:1383. [ Plant Science,IF:2.762 58/234 (Q1),]
-							</p>
-							<p>
-								22. Gal, A; Hendel, E;, Peleg, Z; Schwartz, N*; <strong>Sade, N*</strong>. Measuring the hydraulic conductivity of grass root systems. <strong>CURRENT PROTOCOLS IN PLANT BIOLOGY</strong>. 2020 June; Vol.5: e20110. [ General Medicine,IF(SJR) :0.575 230/529 (Q2)]
-							</p>
-							<p>
-								23. Grunwald, Y;Wigoda, N; Yaaran, A; <strong>Sade, N</strong>; Torne, T; Gosa, G; Moran, N; Moshelion, M*. Bundle-sheath cells are leaf "water valves" controlled by an H+-ATPase via xylem acidification. <strong>THE PLANT JOURNAL</strong> (Accepted). [ Plant Science,IF:6.629 13/234 (Q1]
-							</p>
 							<br>
 							<h3 ><strong>SUBMITTED RESEARCH ARTICLES</strong></h3>
 							<br>
