--- a/Publications.html
+++ b/Publications.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body class="no-sidebar is-preload" style="font-family:Calibri;">
+	<body class="no-sidebar is-preload" style="font-family:Abadi;">
 		<div id="page-wrapper">
 
 			<!-- Header -->
