--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body class="homepage is-preload" style="font-family:Georgia;background-color:GhostWhite;">
+	<body class="homepage is-preload" style="font-family:system-ui;background-color:GhostWhite;">
 		<div id="page-wrapper">
 
 			<!-- Header -->
