--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="home.html">Home</a></li>
+								<li><a href="index.html">Home</a></li>
 								<li><a href="Research white.html">Research</a></li>
 								<li><a href="Lab Members.html">Lab Members</a></li>
 								<li><a href="Publications.html">Publications</a></li>
