--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="index.html" id="logo">Sade Lab</a></h1>
+								<h1>Nir Sade Lab</h1>
 								<hr />
 								<p>The Molecular Physiology of Plants Lab at Tel Aviv University</p>
 							</header>
