--- a/Lab Members.html
+++ b/Lab Members.html
@@ -55,7 +55,7 @@
 				<br>
 
 
-				/*PRINCIPAL INVESTIGATOR*/
+				<!-- PRINCIPAL INVESTIGATOR -->
 				<div class="row gtr-200">
 					<div class="col-12 col-12-mobile" id="content">
 						<article id="main">
@@ -81,7 +81,7 @@
 				<br>
 
 
-				/*POST-DOCTORATE*/
+				<!-- POST-DOCTORATE -->
 				<div class="row gtr-200">
 					<div class="col-12 col-12-mobile" id="content">
 						<article id="main">
@@ -121,7 +121,7 @@
 				<br>
 				
 
-				/*PHD CANDIDATES*/
+				<!-- PHD CANDIDATES -->
 				<div class="row gtr-200">
 					<div class="col-12 col-12-mobile" id="content">
 						<article id="main">
@@ -172,7 +172,7 @@
 				<br>
 				
 
-				/*MSC CANDIDATES*/
+				<!-- MSC CANDIDATES -->
 				<div class="row gtr-200">
 					<div class="col-12 col-12-mobile" id="content">
 						<article id="main">
@@ -211,7 +211,7 @@
 				<br>	
 
 
-				/*FORMER LAB MEMBERS*/
+				<!-- FORMER LAB MEMBERS -->
 				<div class="row gtr-200">
 					<div class="col-12 col-12-mobile" id="content">
 						<article id="main">
