--- a/Lab Members.html
+++ b/Lab Members.html
@@ -70,7 +70,7 @@
 				<br>
 				<div class="row gtr-200">
 					<div class="col-8 col-12-mobile" id="content">
-							<h3 style="text-align:right;padding-top:70px;font-size:30px"><strong>Dr. Nir Sade</strong><u>nirsa@tauex.tau.ac.il</u></h3>
+							<h3 style="text-align:right;padding-top:70px;font-size:30px"><strong>Dr. Nir Sade</strong> <u>nirsa@tauex.tau.ac.il</u></h3>
 					</div>
 					<div class="col-4 col-12-mobile" id="content">
 						<img src="images/Nir.jpg">
@@ -96,7 +96,7 @@
 				<br>
 				<div class="row gtr-200">
 					<div class="col-8 col-12-mobile" id="content">
-							<h3 style="text-align:right;padding-top:70px;font-size:30px"><strong>Dr. Davinder Sharma</strong><u>drdavindersharma@gmail.com</u></h3>
+							<h3 style="text-align:right;padding-top:70px;font-size:30px"><strong>Dr. Davinder Sharma</strong> <u>drdavindersharma@gmail.com</u></h3>
 							<p style="text-align:left;font-size:25px">​Project: Elucidating the genetic regulation of root system architecture and root hydraulics under stress</p>
 					</div>
 					<div class="col-4 col-12-mobile" id="content">
@@ -111,7 +111,7 @@
 						<img src="images/Adi.jpg">
 					</div>
 					<div class="col-8 col-12-mobile" id="content">
-							<h3 style="text-align:right;padding-top:70px;font-size:30px"><strong>Dr. Adi Yaaran</strong><u>adiyaaran@gmail.com</u></h3>
+							<h3 style="text-align:right;padding-top:70px;font-size:30px"><strong>Dr. Adi Yaaran</strong> <u>adiyaaran@gmail.com</u></h3>
 							<p style="text-align:left;font-size:25px">​Project: Regulation of stomata function, ROS formation, water use efficiency and drought tolerance in tomato by ROP GTPase signaling</p>
 					</div>
 					
@@ -136,7 +136,7 @@
 				<br>
 				<div class="row gtr-200">
 					<div class="col-8 col-12-mobile" id="content">
-							<h3 style="text-align:left;padding-top:50px;font-size:30px"><strong>Purity Muchoki</strong> <i>(joint with Professor Shaul Yalovasky)</i><u>muchokipurity@gmail.com</u></h3>
+							<h3 style="text-align:left;padding-top:50px;font-size:30px"><strong>Purity Muchoki</strong> <i>(joint with Professor Shaul Yalovasky)</i> <u>muchokipurity@gmail.com</u></h3>
 							<p style="text-align:left;font-size:25px">​Project: Increased drought tolerance mechanisms in tomato</p>
 					</div>
 					<div class="col-4 col-12-mobile" id="content">
@@ -151,7 +151,7 @@
 						<img src="images/Zechariah.jpg" style="padding-left:150px">
 					</div>
 					<div class="col-8 col-12-mobile" id="content">
-							<h3 style="text-align:left;padding-top:25px;font-size:30px"><strong>Zechariah Haber</strong><u>zacharyhaber@mail.tau.ac.il</u></h3>
+							<h3 style="text-align:left;padding-top:25px;font-size:30px"><strong>Zechariah Haber</strong> <u>zacharyhaber@mail.tau.ac.il</u></h3>
 							<p style="text-align:left;font-size:25px">​Project: Regulation of water use efficiency and osmotic adjustment in wheat under abiotic stress conditions</p>
 					</div>
 				</div>
@@ -160,7 +160,7 @@
 				<br>
 				<div class="row gtr-200">
 					<div class="col-8 col-12-mobile" id="content">
-							<h3 style="text-align:left;padding-top:25px;font-size:30px"><strong>Idan Reingwirtz</strong> <i><u>reingwirtz@mail.tau.ac.il</u></h3>
+							<h3 style="text-align:left;padding-top:25px;font-size:30px"><strong>Idan Reingwirtz</strong> <u>reingwirtz@mail.tau.ac.il</u></h3>
 							<p style="text-align:left;font-size:25px">​Project: Elucidating the genetic regulation of root system architecture and root hydraulics under stress</p>
 					</div>
 					<div class="col-4 col-12-mobile" id="content">
@@ -187,7 +187,7 @@
 				<br>
 				<div class="row gtr-200">
 					<div class="col-8 col-12-mobile" id="content">
-							<h3 style="text-align:left;padding-top:45px;font-size:30px"><strong>Tomer Parpar</strong><u>tomer.parpar@mail.huji.ac.il</u></h3>
+							<h3 style="text-align:left;padding-top:45px;font-size:30px"><strong>Tomer Parpar</strong> <u>parpartomer@gmail.com</u></h3>
 							<p style="text-align:left;font-size:25px">​Project: Genetic variability of source/sink relations in <i>Aegilops longissima</i></p>
 					</div>
 					<div class="col-4 col-12-mobile" id="content">
@@ -202,7 +202,7 @@
 						<img src="images/Yair.jpg" style="padding-left:150px">
 					</div>
 					<div class="col-8 col-12-mobile" id="content">
-							<h3 style="text-align:left;padding-top:45px;font-size:30px"><strong>Yair Zach</strong><u>yairzach47@gmail.com</u></h3>
+							<h3 style="text-align:left;padding-top:45px;font-size:30px"><strong>Yair Zach</strong> <u>yairzach47@gmail.com</u></h3>
 							<p style="text-align:left;font-size:25px">​Project: Identification and validation of novel genes associated with drought tolerance and drought metabolic response using virus induced gene silencing (VIGS) in tomato</i></p>
 					</div>
 				</div>
@@ -226,7 +226,7 @@
 				<br>
 				<div class="row gtr-200">
 					<div class="col-8 col-12-mobile" id="content">
-							<h3 style="text-align:left;padding-top:50px;font-size:30px"><strong>Dr. Ahan Dalal</strong><i>(Post-Doctorate)</i><u>ahan.dalal@gmail.com</u></h3>
+							<h3 style="text-align:left;padding-top:50px;font-size:30px"><strong>Dr. Ahan Dalal</strong> <i>(Post-Doctorate)</i> <u>ahan.dalal@gmail.com</u></h3>
 							<p style="text-align:left;font-size:25px">​Project: System biology approach for elucidating drought tolerance of wild millet</p>
 					</div>
 					<div class="col-4 col-12-mobile" id="content">
@@ -241,7 +241,7 @@
 						<img src="images/yoav.jpg" style="padding-left:150px">
 					</div>
 					<div class="col-8 col-12-mobile" id="content">
-							<h3 style="text-align:left;padding-top:40px;font-size:30px"><strong>Yoav Ahouvi</strong><i>(M.Sc. Candidate)</i><u>yoav.ahouvi@gmail.com</u></h3>
+							<h3 style="text-align:left;padding-top:40px;font-size:30px"><strong>Yoav Ahouvi</strong> <i>(M.Sc. Candidate)</i> <u>yoav.ahouvi@gmail.com</u></h3>
 							<p style="text-align:left;font-size:25px">​Project: source/sink relations and chloroplast degradation in tomatoes under salinity stress</p>
 					</div>
 				</div>
@@ -250,7 +250,7 @@
 				<br>
 				<div class="row gtr-200">
 					<div class="col-8 col-12-mobile" id="content">
-							<h3 style="text-align:left;padding-top:50px;font-size:30px"><strong>Atara Gal</strong><i>(M.Sc. Candidate)</i><u>atarag.gal92@gmail.com</u></h3>
+							<h3 style="text-align:left;padding-top:50px;font-size:30px"><strong>Atara Gal</strong> <i>(M.Sc. Candidate)</i> <u>atarag.gal92@gmail.com</u></h3>
 							<p style="text-align:left;font-size:25px">​Project: Mechanisms controlling crown root hydraulic conductivity and root-to-shoot signalling</p>
 					</div>
 					<div class="col-4 col-12-mobile" id="content">
@@ -265,7 +265,7 @@
 						<img src="images/Yarden.jpg">
 					</div>
 					<div class="col-8 col-12-mobile" id="content">
-							<h3 style="text-align:left;padding-top:40px;font-size:30px"><strong>Yarden Zeron</strong><i>(M.Sc. Candidate)</i><u>yardenzeron@mail.tau.ac.il</u></h3>
+							<h3 style="text-align:left;padding-top:40px;font-size:30px"><strong>Yarden Zeron</strong> <i>(M.Sc. Candidate)</i> <u>yardenzeron@mail.tau.ac.il</u></h3>
 							<p style="text-align:left;font-size:25px">​Project: Development of perennial grains for climate change conditions</p>
 					</div>
 				</div>
@@ -277,7 +277,7 @@
 						<img src="images/Aiman.jpg">
 					</div>
 					<div class="col-4 col-12-mobile" id="content">
-							<h3 style="text-align:left;padding-top:80px;font-size:30px"><strong>Aiman Egbaria</strong><i>(Lab Manager)</i><u>aimanegb@gmail.com</u></h3>
+							<h3 style="text-align:left;padding-top:80px;font-size:30px"><strong>Aiman Egbaria</strong> <i>(Lab Manager)</i> <u>aimanegb@gmail.com</u></h3>
 					</div>
 				</div>
 			</div>
