--- a/Lab Members.html
+++ b/Lab Members.html
@@ -100,7 +100,8 @@
 							<p style="text-align:left;font-size:25px">​Project: Elucidating the genetic regulation of root system architecture and root hydraulics under stress</p>
 					</div>
 					<div class="col-4 col-12-mobile" id="content">
-						<img{object-fit:scale-down;} src="images/Davinder.jpg">
+						img{object-fit: scale-down;}
+						<img src="images/Davinder.jpg">
 					</div>
 				</div>
 				<br>
