--- a/Lab Members.html
+++ b/Lab Members.html
@@ -73,7 +73,7 @@
 							<h3 style="text-align:right;padding-top:70px;font-size:30px"><strong>Dr. Nir Sade</strong> <u>nirsa@tauex.tau.ac.il</u></h3>
 					</div>
 					<div class="col-4 col-12-mobile" id="content">
-						<img src="images/Nir.jpg">
+						<img src="images/Nir.jpg" style="width:180px">
 					</div>
 				</div>
 				<br>
@@ -100,7 +100,7 @@
 							<p style="text-align:left;font-size:25px">​Project: Elucidating the genetic regulation of root system architecture and root hydraulics under stress</p>
 					</div>
 					<div class="col-4 col-12-mobile" id="content">
-						<img src="images/Davinder.jpg" style="object-fit:scale-down;">
+						<img src="images/Davinder.jpg" style="width:180px">
 					</div>
 				</div>
 				<br>
