--- a/Lab Members.html
+++ b/Lab Members.html
@@ -148,7 +148,7 @@
 				<br>
 				<div class="row gtr-200">
 					<div class="col-4 col-12-mobile" id="content">
-						<img src="images/Zechariah.jpg" style="padding-left:150px;width:180px">
+						<img src="images/Zechariah.jpg" style="width:180px">
 					</div>
 					<div class="col-8 col-12-mobile" id="content">
 							<h3 style="text-align:left;padding-top:25px;font-size:30px"><strong>Zechariah Haber</strong> <u>zacharyhaber@mail.tau.ac.il</u></h3>
@@ -164,7 +164,7 @@
 							<p style="text-align:left;font-size:25px">​Project: Elucidating the genetic regulation of root system architecture and root hydraulics under stress</p>
 					</div>
 					<div class="col-4 col-12-mobile" id="content">
-						<img src="images/Idan.jpg" style="padding-left:150px;width:180px">
+						<img src="images/Idan.jpg" style="width:180px">
 					</div>
 				</div>
 				<br>
@@ -191,7 +191,7 @@
 							<p style="text-align:left;font-size:25px">​Project: Genetic variability of source/sink relations in <i>Aegilops longissima</i></p>
 					</div>
 					<div class="col-4 col-12-mobile" id="content">
-						<img src="images/Tomer.jpg" style="padding-left:150px;width:180px">
+						<img src="images/Tomer.jpg" style="width:180px">
 					</div>
 				</div>
 				<br>
@@ -199,7 +199,7 @@
 				<br>
 				<div class="row gtr-200">
 					<div class="col-4 col-12-mobile" id="content">
-						<img src="images/Yair.jpg" style="padding-left:150px;width:180px">
+						<img src="images/Yair.jpg" style="width:180px">
 					</div>
 					<div class="col-8 col-12-mobile" id="content">
 							<h3 style="text-align:left;padding-top:45px;font-size:30px"><strong>Yair Zach</strong> <u>yairzach47@gmail.com</u></h3>
@@ -238,7 +238,7 @@
 				<br>
 				<div class="row gtr-200">
 					<div class="col-4 col-12-mobile" id="content">
-						<img src="images/yoav.jpg" style="padding-left:150px;width:180px">
+						<img src="images/yoav.jpg" style="width:180px">
 					</div>
 					<div class="col-8 col-12-mobile" id="content">
 							<h3 style="text-align:left;padding-top:40px;font-size:30px"><strong>Yoav Ahouvi</strong> <i>(M.Sc. Candidate)</i> <u>yoav.ahouvi@gmail.com</u></h3>
@@ -254,7 +254,7 @@
 							<p style="text-align:left;font-size:25px">​Project: Mechanisms controlling crown root hydraulic conductivity and root-to-shoot signalling</p>
 					</div>
 					<div class="col-4 col-12-mobile" id="content">
-						<img src="images/Atara_edited.jpg" style="padding-left:150px;width:180px">
+						<img src="images/Atara_edited.jpg" style="width:180px">
 					</div>
 				</div>
 				<br>
