--- a/Lab Members.html
+++ b/Lab Members.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
-<body class="right-sidebar is-preload" style="font-family:system-iu">
+<body class="right-sidebar is-preload" style="font-family:system-ui">
 	<div id="page-wrapper">
 
 		<!-- Header -->
