--- a/Research white.html
+++ b/Research white.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
-<body class="left-sidebar is-preload" style="font-family:Georgia;background-color:GhostWhite;">
+<body class="left-sidebar is-preload" style="font-family:system-ui;background-color:GhostWhite;">
 	<div id="page-wrapper">
 
 		<!-- Header -->
@@ -28,7 +28,7 @@
 			<!-- Nav -->
 			<nav id="nav">
 				<ul>
-					<li><a href="home.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="Research white.html">Research</a></li>
 					<li><a href="Lab Members.html">Lab Members</a></li>
 					<li><a href="Publications.html">Publications</a></li>
