--- a/Lab Members.html
+++ b/Lab Members.html
@@ -21,7 +21,7 @@
 			<!-- Inner -->
 			<div class="inner">
 				<header>
-					<h1>Sade Lab</h1>
+					<h1>Nir Sade Lab</h1>
 				</header>
 			</div>
 
