--- a/Contact Us.html
+++ b/Contact Us.html
@@ -21,7 +21,7 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="index.html" id="logo">Sade Lab</a></h1>
+								<h1><a href="index.html" id="logo">Nir Sade Lab</a></h1>
 							</header>
 						</div>
 
